[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/world/crosshair.gd" type="Script" id=1]
[ext_resource path="res://assets/other/crosshair.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 33.2108

[node name="crosshair" type="Area2D"]
z_index = 4096
z_as_relative = false
collision_mask = 31
script = ExtResource( 1 )

[node name="cursor_sprite" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
z_index = 4096
z_as_relative = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_crosshair_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_crosshair_body_exited"]
